feat: getDocumentStructures.