@@ -24,8 +24,12 @@ import net.videki.templateutils.template.core.documentstructure.DocumentStructur
 import net.videki.templateutils.template.core.provider.documentstructure.DocumentStructureRepository;
 import net.videki.templateutils.template.core.provider.documentstructure.builder.DocumentStructureBuilder;
 import net.videki.templateutils.template.core.provider.documentstructure.builder.yaml.YmlDocStructureBuilder;
+import net.videki.templateutils.template.core.provider.persistence.Page;
+import net.videki.templateutils.template.core.provider.persistence.Pageable;
 import net.videki.templateutils.template.core.service.exception.TemplateProcessException;
 import net.videki.templateutils.template.core.service.exception.TemplateServiceConfigurationException;
+import net.videki.templateutils.template.core.service.exception.TemplateServiceException;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -33,22 +37,28 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.reflect.InvocationTargetException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.List;
 import java.util.Properties;
+import java.util.stream.Collectors;
 
 /**
  * File system based document structure repository.
+ * 
  * @author Levente Ban
  */
 public class FileSystemDocumentStructureRepository implements DocumentStructureRepository {
     /**
-     * Configuration property key for the basedir where the document structures will be stored.
+     * Configuration property key for the basedir where the document structures will
+     * be stored.
      */
-    private static final String DOCUMENT_STRUCTURE_PROVIDER_BASEDIR =
-            "repository.documentstructure.provider.filesystem.basedir";
+    private static final String DOCUMENT_STRUCTURE_PROVIDER_BASEDIR = "repository.documentstructure.provider.filesystem.basedir";
 
     /**
-     * Configuration property key for the builder implementation to (de)serialize the document structure descriptors.
+     * Configuration property key for the builder implementation to (de)serialize
+     * the document structure descriptors.
      */
     private static final String DOCUMENT_STRUCTURE_BUILDER = "repository.documentstructure.builder";
 
@@ -69,8 +79,10 @@ public class FileSystemDocumentStructureRepository implements DocumentStructureR
 
     /**
      * Initializes the repository based on the system properties caught.
+     * 
      * @param props the system properties (see template-utils.properties)
-     * @throws TemplateServiceConfigurationException thrown in case of configuration errors.
+     * @throws TemplateServiceConfigurationException thrown in case of configuration
+     *                                               errors.
      */
     @Override
     public void init(final Properties props) throws TemplateServiceConfigurationException {
@@ -84,10 +96,53 @@ public class FileSystemDocumentStructureRepository implements DocumentStructureR
     }
 
     /**
-     * Returns a document structure by its id in the current repository (a descriptor named as the document structure id).
-     * @param documentStructureFile the document structure id (is equal to the filename).
+     * Entry point for repository initialization.
+     * @param props configuration properties (see template-utils.properties) 
+     * @throws TemplateServiceConfigurationException thrown in case of initialization errors based on configuration errors. 
+     */    
+    @Override
+    public Page<DocumentStructure> getDocumentStructures(Pageable page) throws TemplateServiceException {
+
+        try {
+            final Page<DocumentStructure> result = new Page<>();
+
+            final Path basePath = Paths.get(this.basedir).toAbsolutePath();
+            final List<DocumentStructure> items = Files.walk(basePath)
+              .filter(file -> !Files.isDirectory(file))
+              .map(basePath::relativize)
+              .map(Path::toString)
+              .map(t -> new DocumentStructure(t))
+              .collect(Collectors.toList());
+
+            if (page != null && page.isPaged()) {
+                result.setData(items.subList(page.getOffset(), Math.min(page.getOffset() + page.getSize(), Math.max(items.size()-1, 0))));
+            } else {
+                result.setData(items);
+            }
+            result.setNumber(page.getPage());
+            result.setSize(page.getSize());
+            result.setTotalElements(Long.valueOf(items.size()));
+            result.setTotalPages((int) Math.ceil(Float.valueOf(result.getTotalElements()) / page.getSize()));
+
+            return result;
+
+        } catch (final IOException e) {
+            final  String msg = String.format("Error retrieving the document structure list - baseDir: [{}]", this.basedir);
+            LOGGER.error(msg, e);
+
+            throw new TemplateServiceException("71117d2a-9f36-49f5-af25-ddfbca07cea3", msg);
+        }
+    }
+
+    /**
+     * Returns a document structure by its id in the current repository (a
+     * descriptor named as the document structure id).
+     * 
+     * @param documentStructureFile the document structure id (is equal to the
+     *                              filename).
      * @return the document structure descriptor if the provided id was found.
-     * @throws TemplateServiceConfigurationException thrown in case of repository configuration errors. 
+     * @throws TemplateServiceConfigurationException thrown in case of repository
+     *                                               configuration errors.
      */
     @Override
     public DocumentStructure getDocumentStructure(final String documentStructureFile)
@@ -100,10 +155,6 @@ public class FileSystemDocumentStructureRepository implements DocumentStructureR
         } catch (final IOException e) {
             dsAsStream = null;
         }
-
-//        final InputStream dsAsStream = FileSystemDocumentStructureRepository.class
-//                .getClassLoader()
-//                .getResourceAsStream(pathToFile);
 
         if (dsAsStream == null) {
             final String msg = String.format("DocumentStructure not found. File: %s. ", documentStructureFile);
@@ -118,7 +169,8 @@ public class FileSystemDocumentStructureRepository implements DocumentStructureR
     }
 
     /**
-     * Factory method to initialize the descriptor builder implementation.  
+     * Factory method to initialize the descriptor builder implementation.
+     * 
      * @param props the system properties (see template-utils.properties)
      * @return the builder instance
      */
@@ -130,20 +182,18 @@ public class FileSystemDocumentStructureRepository implements DocumentStructureR
             repositoryProvider = (String) props.get(DOCUMENT_STRUCTURE_BUILDER);
 
             if (repositoryProvider != null) {
-                documentStructureBuilder = (DocumentStructureBuilder)
-                        this.getClass().getClassLoader()
-                                .loadClass(repositoryProvider)
-                                .getDeclaredConstructor()
-                                .newInstance();
+                documentStructureBuilder = (DocumentStructureBuilder) this.getClass().getClassLoader()
+                        .loadClass(repositoryProvider).getDeclaredConstructor().newInstance();
             } else {
-                final String msg = "Document structure builder not specified, " +
-                        "using built-in YmlDocStructureBuilder.";
+                final String msg = "Document structure builder not specified, "
+                        + "using built-in YmlDocStructureBuilder.";
                 LOGGER.info(msg);
             }
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException |
-                NoSuchMethodException | InvocationTargetException e) {
-            final String msg = String.format("Error loading document structure builder: %s, " +
-                    "using built-in YmlDocStructureBuilder.", repositoryProvider);
+        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException | NoSuchMethodException
+                | InvocationTargetException e) {
+            final String msg = String.format(
+                    "Error loading document structure builder: %s, " + "using built-in YmlDocStructureBuilder.",
+                    repositoryProvider);
             LOGGER.error(msg, e);
         }
 
